tests/samples/negative/types/string_bad_escape.ax
module string_bad_escape;

const TEXT: str = "\q";

fn main() -> i32 {
    return 0;
}
